--- a/jann/index.html
+++ b/jann/index.html
@@ -59,7 +59,7 @@
                 <span id="typed-strings">
                   <span>I am Jan Nelson</span>
                   <span>Graduate of (BSc. Applied Computer Science) </span>
-                  <span>Class of '20
+                  <span>Software Developer 
                   </span>
                 </span>
                 <span id="typed"></span>
