--- a/jann/contact.html
+++ b/jann/contact.html
@@ -89,7 +89,7 @@
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          jannelson36@gmail.io
+                          jannelso@gmail.io
                         </li>
                         <li>
                           <span class="fa-icon">
